tests/fsharp/typecheck/sigs/neg_byref_10.bsl

neg_byref_10.fs(3,9,3,10): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_10.fs(2,6,2,8): typecheck error FS0437: A type would store a byref typed value. This is not permitted by Common IL.
