tests/fsharp/typecheck/sigs/neg_byref_10.fs
module Test
type M2 = class
    val x : byref<int>                 (* trap: byref fields *)
end
